--- a/apps/server/package.json
+++ b/apps/server/package.json
@@ -10,10 +10,13 @@
   "dependencies": {
     "@prisma/client": "^3.8.1",
     "fastify": "^3.25.3",
-    "fastify-autoload": "^3.10.0"
+    "fastify-autoload": "^3.10.0",
+    "joi": "^17.5.0",
+    "uuid": "^8.3.2"
   },
   "devDependencies": {
     "@types/node": "^17.0.8",
+    "@types/uuid": "^8.3.4",
     "@typescript-eslint/eslint-plugin": "^5.9.1",
     "@typescript-eslint/parser": "^5.9.1",
     "cross-env": "^7.0.3",
