--- a/apps/server/.eslintrc.json
+++ b/apps/server/.eslintrc.json
@@ -21,6 +21,12 @@
     "dist"
   ],
   "rules": {
+    "linebreak-style": [
+      "off"
+    ],
+    "import/prefer-default-export": [
+      "warn"
+    ],
     "import/no-extraneous-dependencies": [
       "error",
       {
