--- a/apps/client/package.json
+++ b/apps/client/package.json
@@ -8,16 +8,20 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@emotion/react": "^11.7.1",
+    "@emotion/styled": "^11.6.0",
     "@mui/material": "^5.2.8",
-    "@mui/styled-engine-sc": "^5.1.0",
+    "axios": "^0.24.0",
+    "deep-equal": "^2.0.5",
     "next": "12.0.8",
     "react": "17.0.2",
     "react-dom": "17.0.2",
     "react-feather": "^2.0.9",
-    "styled-components": "^5.3.3",
     "swr": "^1.1.2"
   },
   "devDependencies": {
+    "@types/deep-equal": "^1.0.1",
+    "@types/draft-js": "^0.11.8",
     "@types/node": "17.0.8",
     "@types/react": "17.0.38",
     "autoprefixer": "^10.4.2",
