--- a/apps/server/package.json
+++ b/apps/server/package.json
@@ -11,6 +11,7 @@
     "@prisma/client": "^3.8.1",
     "fastify": "^3.25.3",
     "fastify-autoload": "^3.10.0",
+    "fastify-cors": "^6.0.2",
     "joi": "^17.5.0",
     "uuid": "^8.3.2"
   },
