--- a/apps/client/package.json
+++ b/apps/client/package.json
@@ -20,6 +20,7 @@
     "swr": "^1.1.2"
   },
   "devDependencies": {
+    "@netlify/plugin-nextjs": "^4.2.0",
     "@types/deep-equal": "^1.0.1",
     "@types/draft-js": "^0.11.8",
     "@types/node": "17.0.8",
