--- a/apps/server/package.json
+++ b/apps/server/package.json
@@ -3,9 +3,11 @@
   "version": "0.0.1",
   "scripts": {
     "start": "node dist",
-    "build": "prisma generate --schema ./database/schema.prisma && ttsc",
+    "build": "yarn prepare && ttsc",
     "dev": "tsc-watch --onSuccess \"cross-env NODE_ENV=development node -r dotenv/config dist\" --compiler ttypescript/bin/tsc",
-    "lint": "eslint --ext .ts ."
+    "lint": "eslint --ext .ts .",
+    "prepare": "prisma generate --schema=./database/schema.prisma",
+    "prisma:pull": "prisma db pull --schema=./database/schema.prisma && yarn prepare"
   },
   "dependencies": {
     "@prisma/client": "^3.8.1",
