--- a/apps/server/.eslintrc.json
+++ b/apps/server/.eslintrc.json
@@ -24,6 +24,9 @@
     "linebreak-style": [
       "off"
     ],
+    "no-param-reassign": [
+      "warn"
+    ],
     "import/prefer-default-export": [
       "warn"
     ],
