--- a/apps/server/package.json
+++ b/apps/server/package.json
@@ -11,13 +11,18 @@
   },
   "dependencies": {
     "@prisma/client": "^3.8.1",
+    "bcrypt": "5.0.1",
     "fastify": "^3.25.3",
     "fastify-autoload": "^3.10.0",
     "fastify-cors": "^6.0.2",
     "joi": "^17.5.0",
+    "jwt-simple": "^0.5.6",
+    "ms": "^2.1.3",
     "uuid": "^8.3.2"
   },
   "devDependencies": {
+    "@types/bcrypt": "^5.0.0",
+    "@types/ms": "^0.7.31",
     "@types/node": "^17.0.8",
     "@types/uuid": "^8.3.4",
     "@typescript-eslint/eslint-plugin": "^5.9.1",
