--- a/apps/client/package.json
+++ b/apps/client/package.json
@@ -17,7 +17,10 @@
     "react": "17.0.2",
     "react-dom": "17.0.2",
     "react-feather": "^2.0.9",
-    "swr": "^1.1.2"
+    "react-skeleton": "^2.2.1",
+    "swr": "^1.1.2",
+    "url-parse": "^1.5.10",
+    "zustand": "^3.7.1"
   },
   "devDependencies": {
     "@netlify/plugin-nextjs": "^4.2.0",
@@ -25,6 +28,7 @@
     "@types/draft-js": "^0.11.8",
     "@types/node": "17.0.8",
     "@types/react": "17.0.38",
+    "@types/url-parse": "^1.4.8",
     "autoprefixer": "^10.4.2",
     "eslint": "8.6.0",
     "eslint-config-next": "12.0.8",
