--- a/apps/server/package.json
+++ b/apps/server/package.json
@@ -16,12 +16,13 @@
     "fastify-autoload": "^3.10.0",
     "fastify-cors": "^6.0.2",
     "joi": "^17.5.0",
-    "jwt-simple": "^0.5.6",
+    "jsonwebtoken": "^8.5.1",
     "ms": "^2.1.3",
     "uuid": "^8.3.2"
   },
   "devDependencies": {
     "@types/bcrypt": "^5.0.0",
+    "@types/jsonwebtoken": "^8.5.8",
     "@types/ms": "^0.7.31",
     "@types/node": "^17.0.8",
     "@types/uuid": "^8.3.4",
